# coqtwee

./: .gitignore  Makefile  _CoqProject  bench.sh  coqtwee.opam  dune  dune-project  readme.md
bench/: result.md
bench/converted/GRP001-2/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP001-4/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP002-10/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP002-2/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP002-3/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP002-4/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP010-4/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP011-4/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP012-4/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP014-1/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP022-2/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP023-2/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP024-4/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP024-5/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP048-10/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP049-1/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP050-1/: Hammer.v  LPO.v  SMT.v  Twee.v
bench/converted/GRP051-1/: LPO.v  (+3 more)
e2e_test/: Braid.v  Commonoid.v  GRP001_4.v  GRP048_10.v  Group.v  Mutl4x4.v  Twee.v  TweeDoctor.v  WithHyp.v  dune
misc/: GRP048_10_HandWritten.v
src/: META.coqtwee  coqtwee.mlpack  coqutil.ml  dune  g_syntax.mlg  main.ml  main.mli  prover.ml  twee.ml  twee.mli
theories/: Twee.v  dune
unit_test/: dune  twee_test.ml
(+2440 files in other folders)
